--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,12 +1,12 @@
 <nav id="nav-main" role="navigation" itemscope itemtype="http://schema.org/SiteNavigationElement">
   <ul class="nav">
-      <li><%=  link_to 'About', page_path('terms-of-use') %></li>
+      <li><%=  link_to 'Terms', terms_of_service_path %></li>
     <% if user_signed_in? %>
-      <li><%= link_to 'Add Beat', new_beat_path, title: "Upload a new beat" %></li>
-      <li><%= link_to 'Profile', user_path(current_user), title: "View Profile" %></li>
-      <li><%= link_to 'Logout', destroy_user_session_path, :method=>'delete', title: "Logout" %></li>
+      <li><%= link_to 'Upload', upload_path, title: "Upload a new beat" %></li>
+      <li><%= link_to 'Profile', permalink_user_path(current_user.permalink), title: "View Profile" %></li>
+      <li><%= link_to 'Logout', logout_path, title: "Logout" %></li>
     <% else %>
-      <li><%= link_to 'Login', new_user_session_path, title: "Login" %></li>
+      <li><%= link_to 'Login',  login_path, title: "Login" %></li>
     <% end %>
   </ul>
 </nav>
