update rails and gems, add welcome page, loop mp3 samples

--- a/app/views/beats/_beat.html.erb
+++ b/app/views/beats/_beat.html.erb
@@ -1,7 +1,7 @@
 <article class="beat beat-index cf" data-dom-id="<%= dom_id(beat) %>">
   <header class="cf">
     <section class="audio">
-      <audio id="<%= dom_id(beat) %>" src="<%= beat.midi.url(:mp3) %>">
+      <audio id="<%= dom_id(beat) %>" src="<%= beat.midi.url(:mp3) %>" loop="1">
         Your browser does not support the <code>audio</code> element
       </audio>
 
