--- a/app/views/beats/show.html.erb
+++ b/app/views/beats/show.html.erb
@@ -5,7 +5,7 @@
 
     <div class="cf">
       <div class="audio">
-        <audio id="<%= dom_id(@beat) %>" class="audio" src="<%= @beat.midi.url(:mp3) %>">
+        <audio id="<%= dom_id(@beat) %>" class="audio" src="<%= @beat.midi.url(:mp3) %>" loop="1">
           Your browser does not support the <code>audio</code> element
         </audio>
 
