--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -42,7 +42,9 @@
         %>
       </div>
       
-      <%= yield %>
+      <div class="entry-content">
+        <%= yield %>
+      </div>
     </div>
 
     <!--
